--- a/index.html
+++ b/index.html
@@ -131,17 +131,37 @@ canvas {
 <div class="hero">
     <h1>RISHIL</h1>
     <h3>What I've Accomplished</h3>
+
+    <div style="margin-top:60px; text-align:center;">
+        <div id="dealMain" style="
+            font-family:'Playfair Display', serif;
+            font-size:72px;
+            color:#d4af37;
+            letter-spacing:2px;
+            text-shadow:0 0 25px rgba(212,175,55,0.6);
+            transition:0.4s ease;
+        ">305</div>
+
+        <div style="
+            margin-top:10px;
+            font-size:16px;
+            letter-spacing:3px;
+            opacity:0.7;
+        ">
+            TOTAL DEALS PERSONALLY CLOSED
+        </div>
+    </div>
 </div>
 
 <!-- TELECOM -->
 <div class="section fade">
-<h2>Telecommunications Performance</h2>
+<h2>Telecom Product Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$1,141,920</div><p>Total Generated</p></div>
 <div><div class="stat">38 Weeks</div><p>Top 20 U.S. Streak (3rd Longest Nationally)</p></div>
 <div><div class="stat">$26.2K</div><p>Peak Weekly Commission</p></div>
-<div><div class="stat">35+</div><p>Sales Weekly | #1 Nationwide</p></div>
+<div><div class="stat">35+</div><p>Sales Weekly | Reached #1 Nationwide</p></div>
 <div><div class="stat">11 Weeks</div><p>#1 B2B Fiber National Record</p></div>
 </div>
 </div>
@@ -149,7 +169,7 @@ canvas {
 
 <!-- AI -->
 <div class="section fade">
-<h2>Artificial Intelligence Industry</h2>
+<h2>Artificial Intelligence Product Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$93,122</div><p>Total Generated</p></div>
@@ -160,7 +180,7 @@ canvas {
 
 <!-- HOME IMPROVEMENT -->
 <div class="section fade">
-<h2>Home Improvement Services</h2>
+<h2>Home Improvement Services Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$188,342</div><p>Total Generated</p></div>
