--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ canvas {
 
 <!-- TELECOM -->
 <div class="section fade">
-<h2>Telecommunications Performance</h2>
+<h2>Telecom Product Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$1,141,920</div><p>Total Generated</p></div>
@@ -168,7 +168,7 @@ canvas {
 
 <!-- AI -->
 <div class="section fade">
-<h2>Artificial Intelligence Industry</h2>
+<h2>Artificial Intelligence Product Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$93,122</div><p>Total Generated</p></div>
@@ -179,7 +179,7 @@ canvas {
 
 <!-- HOME IMPROVEMENT -->
 <div class="section fade">
-<h2>Home Improvement Services</h2>
+<h2>Home Improvement Services Sales</h2>
 <div class="panel">
 <div class="stat-grid">
 <div><div class="stat">$188,342</div><p>Total Generated</p></div>
@@ -196,10 +196,10 @@ canvas {
 <h2>Leadership & Scale</h2>
 <div class="panel">
 <div class="stat-grid">
-<div><div class="stat">40+</div><p>People Hired & Trained</p></div>
+<div><div class="stat">50+</div><p>People Coached & Trained</p></div>
 </div>
 <p style="margin-top:40px;">
-Built teams. Trained performers. Replicated elite execution standards.
+Built teams, trained performers, and replicated elite execution standards. Showing modern-day salesmen how to utilize their skills, earn their time back, and work for themselves.
 </p>
 </div>
 </div>
