--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ Built teams, trained performers, and replicated elite execution standards. Showi
 <h2>Building The Largest Free Community</h2>
 <div class="panel">
 Creating a free network of disciplined, growth-oriented individuals.
-Where strategy is shared. Standards are high.
-And execution is everything.
+Where strategy is shared. Standards are high. And execution is everything. 
+My goal is to teach modern-day salesmen how to utilize and further enhance their skills in order to earn their freedom/time back.
 </div>
 </div>
 
