--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ canvas {
 <h2>Telecom Product Sales</h2>
 <div class="panel">
 <div class="stat-grid">
-<div><div class="stat">$1,141,920</div><p>Total Generated</p></div>
-<div><div class="stat">38 Weeks</div><p>Top 20 U.S. Streak</p></div>
+<div><div class="stat">$1,141,927</div><p>Total Generated</p></div>
+<div><div class="stat">38 Weeks</div><p>Top 20 U.S. Streak (Out of 8k+ sales reps nationwide)</p></div>
 <div><div class="stat">$26.2K</div><p>Peak Weekly Commission</p></div>
-<div><div class="stat">35+</div><p>Sales Weekly | #1 Nationwide</p></div>
+<div><div class="stat">35+</div><p>Sales Weekly | #1/8,000+ Nationwide</p></div>
 <div><div class="stat">11 Weeks</div><p>#1 B2B Fiber National Record</p></div>
 </div>
 </div>
